# tRayce-hs

./: README.md  tRayce-hs.cabal
src/: Bitmap.hs  Camera.hs  Main.hs  Primitives.hs  Scene.hs  Vector.hs
